<?xml version="1.0" encoding="utf-8"?>
<resources>
    <!-- Strings related to username -->
    <string name="title_activity_login">Вход</string>
    <string name="prompt_login">Логин</string>
    <string name="prompt_password">Пароль</string>
    <string name="action_sign_in">Войти</string>
    <string name="prompt_users">Сотрудники</string>
    <string name="error_incorrect_login_password">Неправильный логин или пароль</string>

    <!-- Main -->
    <string name="app_name">TestApp</string>
    <string name="navigation_drawer_close">Закрыть панель навигации</string>
    <string name="navigation_drawer_open">Открыть панель навигации</string>

    <!-- Users list -->
    <string name="title_users">Сотрудники</string>
    <string name="prompt_no_users">Список сотрудников пуст</string>
    <string name="action_add_user">Добавить сотрудника</string>

    <!-- User details -->
    <string name="title_user_details">Данные сотрудника</string>
    <string name="prompt_delete_user">Удалить сотрудника?</string>
    <string name="prompt_deletion">Удаление…</string>
    <string name="prompt_user_deleted">Сотрудик удален</string>
    <string name="error_user_already_deleted">Сотрудник уже удален</string>

    <!-- Add user -->
    <string name="title_new_user">Новый сотрудник</string>
    <string name="prompt_first_name">Имя</string>
    <string name="prompt_last_name">Фамилия</string>
    <string name="prompt_user_saved">Сотрудник сохранен</string>
    <string name="error_only_latin_letters">Только латинские символы</string>

    <string name="title_tasks">Задачи</string>

    <!-- Common -->
    <string name="action_refresh">Обновить</string>
    <string name="action_search">Поиск</string>
    <string name="action_retry">Повторить</string>
    <string name="action_settings">Настройки</string>
    <string name="error_field_required">Обязательное поле</string>
    <string name="error_min_length">Минимум %1$d символа</string>
    <string name="error_max_length">Максимум %1$d символов</string>
    <string name="action_save">Сохранить</string>
    <string name="action_delete">Удалить</string>
    <string name="action_edit">Редактировать</string>
    <string name="prompt_saving">Сохранение…</string>

    <string name="error_no_connection">Отсутствует интернет подключение</string>
    <string name="error_server_unavailable">Сервер временно недоступен</string>
    <string name="error_unexpected_response">Неожиданный ответ от сервера</string>
    <string name="error_unknown">Неизвестная ошибка: %s</string>
    <string name="prompt_tasks">Задачи</string>
    <string name="error_user_not_found">Сотрудник не найден</string>
    <string name="title_edit_user">Изменить сотрудника</string>
    <string name="prompt_logout">Выйти</string>

    <string name="prompt_today">Сегодня</string>
    <string name="prompt_tomorrow">Завтра</string>
    <string name="prompt_day_after_tomorrow">Послезавтра</string>

    <string name="title_new_task">Новая задача</string>
    <string name="title_edit_task">Изменить задачу</string>
    <string name="prompt_title">Название</string>
    <string name="prompt_date">Дата</string>
    <string name="prompt_task_saved">Задача сохранена</string>

    <string name="prompt_no_tasks">Список задач пуст</string>
    <string name="title_task_details">Детали по задаче</string>
    <string name="prompt_delete_task">Удалить задачу?</string>
    <string name="prompt_task_deleted">Задача удалена</string>
    <string name="error_task_not_found">Задача не найдена</string>
    <string name="title_task_user_spinner">Сотрудник</string>
    <string name="title_activity_main2">Main2Activity</string>

    <string name="title_tasks_all_todo">Текущие задачи</string>
    <string name="title_tasks_all_done">Все выполненные</string>
    <string name="title_tasks_my_todo">Мои задачи</string>
    <string name="title_tasks_my_done">Мои выполненные</string>
    <string name="prompt_search">поиск</string>

    <string name="prompt_sending_request">Отправка запроса…</string>
    <string name="action_cancel">отмена</string>

    <string name="action_mark_as_done">Отметить как выполненную</string>
    <string name="action_mark_as_not_done">Отметить как невыполненную</string>
    <string name="prompt_task_marked_as_done">Задача отмечена как выполненная</string>
    <string name="prompt_task_marked_as_not_done">Задача отмечена как невыполненная</string>
    <string name="prompt_task_done_canceled">Задача возвращена в состояние невыполнена</string>
    <string name="prompt_task_undone_canceled">Задача возвращена в состояние выполнена</string>

    <string name="title_profile">Профиль</string>
    <string name="username_format">Логин: %1$s</string>
    <string name="action_change_password">Изменить пароль</string>
    <string name="title_change_password">Изменение пароля</string>
    <string name="prompt_new_password">Новый пароль</string>
    <string name="prompt_new_password_confirm">Новый пароль (еще раз)</string>
    <string name="error_passwords_match">Пароли должны совпадать</string>
    <string name="prompt_password_changed">Пароль изменен</string>

</resources>