<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <group android:id="@+id/group_task_actions">
        <item
            android:id="@+id/action_edit"
            android:icon="@drawable/ic_create"
            android:title="@string/action_edit"
            app:showAsAction="ifRoom" />

        <item
            android:id="@+id/action_delete"
            android:icon="@drawable/ic_delete"
            android:title="@string/action_delete"
            app:showAsAction="ifRoom" />

        <item
            android:id="@+id/action_done"
            android:icon="@drawable/ic_done"
            android:title="@string/action_mark_as_done"
            app:showAsAction="ifRoom" />
    </group>

</menu>